src/objects/auCXKnowledge__c.object
<CustomObject>
    <fields>
        <fullName>AcceptComment__c</fullName>
        <label>Accept Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CalculateAttachmentTechnical__c</fullName>
        <label>CalculateAttachmentTechnical</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category1__c</fullName>
        <label>Category1</label>
        <picklist>
            <picklistValues>
                <fullName>cxcat1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat1-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat1-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat1-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat1-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat1-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat1-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat2-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat2-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat2-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat2-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat2-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat3-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat3-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat3-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat3-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat4-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat4-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat10</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category2__c</fullName>
        <label>Category2</label>
        <picklist>
            <picklistValues>
                <fullName>cxcat1</fullName>
                <label>接客マナー</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat1-1</fullName>
                <label>挨拶</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat1-2</fullName>
                <label>笑顔</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat1-3</fullName>
                <label>身だしなみ</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat1-4</fullName>
                <label>言葉遣い、態度</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat1-5</fullName>
                <label>親身な聞き方</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat1-6</fullName>
                <label>接客マナー(その他)</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat2</fullName>
                <label>接客トーク</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat2-1</fullName>
                <label>お客様の理解度に合わせたわかりやすい説明</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat2-2</fullName>
                <label>お客様の使い方に合った料金説明、提案</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat2-3</fullName>
                <label>便利な使い方のアドバイス</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat2-4</fullName>
                <label>ご用件以外のお困り事伺い</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat2-5</fullName>
                <label>接客トーク(その他)</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat3</fullName>
                <label>店内オペレーション</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat3-1</fullName>
                <label>ご用件伺い</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat3-2</fullName>
                <label>待ち時間案内</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat3-3</fullName>
                <label>待ち時間中の気遣い</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat3-4</fullName>
                <label>店内オペレーション(その他)</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat4</fullName>
                <label>コーナー展開/ディスプレイ</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat4-1</fullName>
                <label>店舗の掲示内容や価格表</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat4-2</fullName>
                <label>コーナー展開/ディスプレイ(その他)</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat5</fullName>
                <label>業務効率化</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat6</fullName>
                <label>ロープレ</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat7</fullName>
                <label>クレンリネス</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat8</fullName>
                <label>オーナー向け発表会</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat9</fullName>
                <label>auエキスパート</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat10</fullName>
                <label>その他</label>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category3__c</fullName>
        <label>Category3</label>
        <picklist>
            <picklistValues>
                <fullName>cxcat1</fullName>
                <label>接客マナー</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat1-1</fullName>
                <label>挨拶</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat1-2</fullName>
                <label>笑顔</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat1-3</fullName>
                <label>身だしなみ</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat1-4</fullName>
                <label>言葉遣い、態度</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat1-5</fullName>
                <label>親身な聞き方</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat1-6</fullName>
                <label>接客マナー(その他)</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat2</fullName>
                <label>接客トーク</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat2-1</fullName>
                <label>お客様の理解度に合わせたわかりやすい説明</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat2-2</fullName>
                <label>お客様の使い方に合った料金説明、提案</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat2-3</fullName>
                <label>便利な使い方のアドバイス</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat2-4</fullName>
                <label>ご用件以外のお困り事伺い</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat2-5</fullName>
                <label>接客トーク(その他)</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat3</fullName>
                <label>店内オペレーション</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat3-1</fullName>
                <label>ご用件伺い</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat3-2</fullName>
                <label>待ち時間案内</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat3-3</fullName>
                <label>待ち時間中の気遣い</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat3-4</fullName>
                <label>店内オペレーション(その他)</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat4</fullName>
                <label>コーナー展開/ディスプレイ</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat4-1</fullName>
                <label>店舗の掲示内容や価格表</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat4-2</fullName>
                <label>コーナー展開/ディスプレイ(その他)</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat5</fullName>
                <label>業務効率化</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat6</fullName>
                <label>ロープレ</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat7</fullName>
                <label>クレンリネス</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat8</fullName>
                <label>オーナー向け発表会</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat9</fullName>
                <label>auエキスパート</label>
            </picklistValues>
            <picklistValues>
                <fullName>cxcat10</fullName>
                <label>その他</label>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CommentOnly__c</fullName>
        <label>Comment Only</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommunityLink__c</fullName>
        <formula>$Setup.auCommunityCustomSettings__c.CommunityDomainUrl__c + &apos;/cx?cxknowledge=&apos; + Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CommunityLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContributionShort__c</fullName>
        <label>Contribution (Short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contribution__c</fullName>
        <label>Contribution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CreatedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>auCXKnowledge_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DisplayedDate__c</fullName>
        <label>DisplayedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FirstApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>1st approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>auCXKnowledge_FirstApprover</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HasAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasAttachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCommentOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCommentOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedDateValue__c</fullName>
        <formula>Datevalue(DisplayedDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDateValue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NationalAcceptComment__c</fullName>
        <label>National Accept Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NationalRejectComment__c</fullName>
        <label>National Reject Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PublishAlsoAttachmentsList__c</fullName>
        <label>PublishAlsoAttachmentsList</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PublishAlsoAttachments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PublishAlsoAttachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecalculateSharingVersion__c</fullName>
        <defaultValue>0</defaultValue>
        <label>RecalculateSharingVersion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RejectComment__c</fullName>
        <label>Reject Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScopeRecommendation__c</fullName>
        <label>二次承認者への申し送り事項</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ScopeSharing__c</fullName>
        <label>Scope Sharing</label>
        <picklist>
            <picklistValues>
                <fullName>RegionalOffice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SecondApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>2nd approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>auCxKnowledge_SecondApprover</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staff_No__c</fullName>
        <label>Staff No.</label>
        <length>135</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>TemporarySaved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Saved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NationalApproved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TechnicalAlwaysBlank__c</fullName>
        <label>TechnicalAlwaysBlank</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TechnicalFavorite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical Favorite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TitleShort__c</fullName>
        <label>Title (Short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>CXナレッジ</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CX-{00000000}</displayFormat>
        <label>CXナレッジ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Account1stParent__c</fullName>
        <label>運営</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Account2ndParent__c</fullName>
        <label>一次</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Creator__c</fullName>
        <label>作成者</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>KDDISalesUser__c</fullName>
        <label>KDDI営業担当</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>RoleAndSub_Shisha__c</fullName>
        <label>支社 Sub</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Role_Honbu__c</fullName>
        <label>本部</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Role_Shisha__c</fullName>
        <label>支社</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Role_Shiten__c</fullName>
        <label>支店</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>ShopSameAccount1stParent__c</fullName>
        <label>ショップ・同運営</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>ShopSameShisha__c</fullName>
        <label>店舗・同支社</label>
    </sharingReasons>
</CustomObject>